SERVER-51288 util/net/sock.h uninitialized field